Command to toggle op status in both Spotchat channels added

--- a/commands.conf
+++ b/commands.conf
@@ -116,5 +116,14 @@ CMD msg chanserv akick #linuxmint-help del %2
 NAME ADA
 CMD msg chanserv akick #linuxmint-chat del %2
 
+NAME OPON
+CMD msg ChanServ op #linuxmint-chat
 
+NAME OPON
+CMD msg ChanServ op #linuxmint-help
 
+NAME OPOFF
+CMD msg ChanServ deop #linuxmint-chat
+
+NAME OPOFF
+CMD msg ChanServ deop #linuxmint-help
