Added popup.conf items for akicks with different durations

--- a/popup.conf
+++ b/popup.conf
@@ -76,29 +76,21 @@ CMD kickban %s 3
 NAME SEP2
 CMD
 
-# NAME AKick
-# CMD msg chanserv akick %c add %2 !T &3
-
 # NAME Delete AKick
 # CMD msg chanserv akick %c del %2
 
-NAME AKick - 24h
-CMD msg chanserv akick #linuxmint-help add %2 24h &3
+NAME ban 1 day 
+CMD msg chanserv akick %c add *!*@%h !T 24h
 
-NAME AKick - 24h
-CMD msg chanserv akick #linuxmint-chat add %2 24h &3
+NAME ban 1 week
+CMD msg chanserv akick %c add *!*@%h !T 1w
 
-NAME AKick - 1w
-CMD msg chanserv akick #linuxmint-help add %2 1w &3
+NAME ban 30 days 
+CMD msg chanserv akick %c add *!*@%h !T 30d
 
-NAME AKick - 1w
-CMD msg chanserv akick #linuxmint-chat add %2 1w &3
+NAME ban 90 day 
+CMD msg chanserv akick %c add *!*@%h !T 90d
 
-NAME AKick - 90d
-CMD msg chanserv akick #linuxmint-help add %2 90d &3
-
-NAME AKick - 90d
-CMD msg chanserv akick #linuxmint-chat add %2 90d &3
 
 NAME ENDSUB
 CMD 
