Added Librera Chat config AND added a 365 day aka ban

--- a/popup.conf
+++ b/popup.conf
@@ -91,6 +91,8 @@ CMD msg chanserv akick %c add *!*@%h !T 30d
 NAME ban 90 day 
 CMD msg chanserv akick %c add *!*@%h !T 90d
 
+NAME Ban 365 Days 
+CMD msg chanserv akick %c add *!*@%h !T 365d
 
 NAME ENDSUB
 CMD 
