mute trial added - untested

--- a/commands.conf
+++ b/commands.conf
@@ -127,3 +127,9 @@ CMD msg ChanServ deop #linuxmint-chat
 
 NAME OPOFF
 CMD msg ChanServ deop #linuxmint-help
+
+NAME MUTE
+cmd mode #linuxmint-chat +b m:%2
+
+NAME MUTE
+cmd mode #linuxmint-help +b m:%2
